--- a/public/html/index.html
+++ b/public/html/index.html
@@ -140,12 +140,16 @@
 		<div class="table-responsive">
 		  <table class="table table-striped table-bordered">
 		    <tbody>
+		      {{range .Categorias}}
+		      {{range $.artigos}}
 		      <tr>
-			<td>Link 1</td>
+			<td>$.url</td>
 		      </tr>
-		      <tr>
-			<td>Link 2</td>
-		      </tr>
+		      {{end}}
+		      {{end}}
+		      <!-- <tr> -->
+		      <!-- 	<td>Link 2</td> -->
+		      <!-- </tr> -->
 		    </tbody>
 		  </table>
 		</div>
